--- a/css/about.css
+++ b/css/about.css
@@ -3,7 +3,7 @@
     position: relative;
     max-width: 800px;
     margin: auto;
-    background: rgba(0, 0, 0, 0.815);
+    background: rgba(0, 0, 0, 0.87);
     box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
     padding: 15px 25px;
     border-radius: 25px;
@@ -93,7 +93,7 @@
   width: 250px;
   flex-shrink: 0;
   height: 250px;
-  background-color: rgba(0, 0, 0, 0.115);
+  background-color: transparent;
   border-radius: 20px;
   transform: translateX(-10px);
   overflow: hidden;
