--- a/css/navbar.css
+++ b/css/navbar.css
@@ -51,7 +51,9 @@ nav a.active {
     top:50%;
     transform: translate(-50%, -50%);
     padding: 0px;
-    background-color:transparent;
+    background: rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px); 
     border-style:none;
     outline: none;
     cursor: pointer;
