--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 * {
     margin: 0;
@@ -21,6 +20,13 @@ header {
     justify-content: flex-end;
     align-items: center;
 }
+
+nav {
+    background: rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+}
+
 nav a {
     font-size: 30px;
     color: rgb(246, 146, 89);
