--- a/css/navbar.css
+++ b/css/navbar.css
@@ -191,6 +191,7 @@ nav a.active {
         transform: translateY(-230px);  
         background: rgba(0, 0, 0, 0.1);
         backdrop-filter: blur(8px);
+        -webkit-backdrop-filter: blur(4px); /* WebKit-specific prefix */
         padding: 120px 0;
             
     }
@@ -199,7 +200,7 @@ nav a.active {
         transition: 0.5s;
     }
     nav a{
-        margin-top: 30px;
+        margin: 30px 0 0 0;
         font-size: 50px;
     }
 }
