--- a/css/contact.css
+++ b/css/contact.css
@@ -12,15 +12,19 @@
 
 
 .containera {
-  background-color: rgba(0, 0, 0, 0.8);
-  border-radius: 10px;
-  position: relative;
-  overflow: hidden;
-  width: 746px;
-  max-width: 100%;
-  min-height: 480px;
+	background-color: rgba(0, 0, 0, 0.8);
+	border-radius: 10px;
+	position: relative;
+	overflow-x: hidden;
+	width: 746px;
+	max-width: 100%;
+	min-height: 480px;
   min-width:340px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 20px 0 0 0;
 }
 .lg-view{
   color: grey;
@@ -35,14 +39,15 @@ h2 {
 
 .left-container {
   flex:1;
-  height:480px;
+  height: max-content;
 }
 .right-container {
   display:flex;
   flex:1;
-  height:460px;
+  height: 100%;
   justify-content:center;
   align-items:center;
+  overflow-y: visible;
 }
 
 .left-container {
@@ -72,11 +77,11 @@ h2 {
 }
 
 input, textarea {
-  background-color: #2a2929;
-  border: none;
-  padding: 12px 15px;
-  margin: 8px 0;
-  width: 100%;
+	background-color: #2a2929;
+	border: none;
+	padding: 12px 15px;
+	margin: 8px 0;
+	width: 100%;
   font-size:1.4rem;
   color: #f49862;
 }
@@ -91,16 +96,16 @@ input:active, textarea:active {
 }
 
 button {
-  border-radius: 20px;
-  border: 1px solid #f49862;
-  background-color: #2a2929;
-  color: grey;
-  font-size: 12px;
-  font-weight: bold;
-  padding: 12px 45px;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-  transition: transform 80ms ease-in;
+	border-radius: 20px;
+	border: 1px solid #f49862;
+	background-color: #2a2929;
+	color: grey;
+	font-size: 12px;
+	font-weight: bold;
+	padding: 12px 45px;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	transition: transform 80ms ease-in;
   cursor:pointer;
 }
 
@@ -120,9 +125,6 @@ button:hover {
   }
   .left-container{
     display: none;
-  }
-  .lg-view {
-      
   }
 }
 
