--- a/css/style.scss
+++ b/css/style.scss
@@ -51,7 +51,7 @@ body{
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
-                
+                padding: 0 20px;
                 h1{
                     color: var(--primary-brown);
                     font-family: 'Oswald';
