--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ body .wrapper .intro .ob {
   border: none;
   font-family: sans-serif;
   border-radius: 10px;
+  padding: 0 20px;
 }
 body .wrapper .intro .logo {
   text-align: center;
