--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ body .wrapper .intro .ob {
   font-family: sans-serif;
   border-radius: 10px;
   padding: 0 20px;
+  display: none;
 }
 body .wrapper .intro .logo {
   text-align: center;
